--- a/Systemet/Views/Grupp/Details.cshtml
+++ b/Systemet/Views/Grupp/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Details";
+    TempData["användarID"] = Convert.ToInt32(Session["AnvändarID"]);
 }
 
 <ol class="breadcrumb">
