--- a/Systemet/Views/Grupp/gruppsida.cshtml
+++ b/Systemet/Views/Grupp/gruppsida.cshtml
@@ -2,6 +2,7 @@
 @{
     <link rel="stylesheet" href="~/Content/Sensify.css">
     ViewBag.Title = "Gruppsida";
+    TempData["användarID"] = Convert.ToInt32(Session["AnvändarID"]);
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
