--- a/Systemet/Views/Grupp/gruppsida.cshtml
+++ b/Systemet/Views/Grupp/gruppsida.cshtml
@@ -1,6 +1,7 @@
-﻿@model Tuple <Systemet.Models.Grupp, ICollection<Systemet.Models.Evenemang>, ICollection<Systemet.Models.Uppgifter>>
+﻿@model Tuple<Systemet.Models.Grupp, ICollection<Systemet.Models.Evenemang>, ICollection<Systemet.Models.Uppgifter>>
 @{
     <link rel="stylesheet" href="~/Content/Sensify.css">
+    <link rel="stylesheet" href="~/Content/agenda.css">
     ViewBag.Title = "Gruppsida";
     TempData["användarID"] = Convert.ToInt32(Session["AnvändarID"]);
 }
@@ -15,106 +16,268 @@
 
 
 
+ <div class="well-lg" style="background-color:#eee">
+    <div class="container-fluid">
+        <input type="submit" value="Alla venemang" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large" />
 
-<div class="row">
-    <h2> @Model.Item1.GruppNamn</h2>
-    <div class="col-lg-6">
+        @*START KALENDER*@
+        <div class="agenda">
+            <div class="table-responsive col-sm-12">
+                <table class="table table-condensed table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Datum</th>
+                            <th>Tid</th>
+                            <th>Evenemang</th>
+                        </tr>
+                    </thead>
 
-        <div class="input-group pull-left">
-            <span class="glyphicon glyphicon-user input-group-btn"></span>
-            @Html.ActionLink("Detaljer", "Details", "Grupp", new {id=@Model.Item1.GruppID }, null @*htmlAttributes: new { @class = "form-control input-group pull-left btn-danger btn-primary" }*@)
-        </div>
-    </div>
+                    @foreach (var ev in Model.Item2)
+                    {
+                        <tbody>
+                            <tr class="table">
+                                <td class="agenda-date active" style="background-color:#eee" rowspan="@Model.Item2.Count()">
+                                    <div class="dayofmonth">@ev.Tidpunkt.Day/@ev.Tidpunkt.Month</div>
+                                    <div class="dayofweek">@ev.Tidpunkt.DayOfWeek</div>
+                                    <div class="shortdate text-muted">@ev.Tidpunkt.Year</div>
+                                </td>
+                                <td class="agenda-time" style="background-color:#eee">
+                                    @ev.Tidpunkt.ToShortTimeString();
+                                </td>
+                                <td class="agenda-events" style="background-color:#eee">
+                                    <div class="agenda-event">
 
+                                        <button class="btn btn-primary" type="button"
+                                                onclick="location.href='@Url.Action("evenemangssida", "Evenemangs", new { idet = ev.EvenemangID })'" title="@ev.EvenemangID">
+                                            @ev.Namn <span class="badge">@ev.Åsikter.Count()</span>
+                                        </button>
 
-    <div class="col-lg-6">
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    }
 
-        @using (Html.BeginForm("gåmedigrupp", "Grupp"))
-        {
-            <div class="input-group pull-right">
-                @ViewBag.Sökning
-                @Html.TextBox("sökning", null, htmlAttributes: new { @id = "sökning", @class = "form-control input-group pull-right" })
-                <span class="input-group-btn">
-                    <input type="submit" value="sökning" id="sökning" class="btn btn-secondary btn-danger" />
-                </span>
+                </table>
             </div>
 
-        }
+        </div>
     </div>
-
 </div>
 
 
+@*här börjar uppgiftsindelningen*@
+                <div class="well-lg" style="background-color:#e0e0e0">
+    <div class="container-fluid">
+        <input type="submit" value="Alla evenemang" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large"  />
+
+        @*START KALENDER*@
+        <div class="agenda">
+            <div class="table-responsive col-sm-12">
+                <table class="table table-condensed table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Startdatum</th>
+                            <th>Beskrivning</th>
+                            <th>Uppgift</th>
+                            <th>Ansvarig</th>
+                            <th>Påbörjad</th>
+                        </tr>
+                    </thead>
+
+                    @foreach (var ev in Model.Item3)
+                    {
+                        <tbody>
+                            <tr class="table">
+                                <td class="agenda-date active" style="background-color:#e0e0e0" rowspan="@Model.Item2.Count()">
+                                    <div class="dayofmonth">@ev.Startdatum.Day/@ev.Startdatum.Month</div>
+                                    <div class="dayofweek">@ev.Startdatum.DayOfWeek</div>
+                                    <div class="shortdate text-muted">@ev.Startdatum.Year</div>
+                                </td>
+                                <td class="agenda-time" style="background-color:#e0e0e0">
+                                    @ev.Beskrivning
+                                </td>
+                                <td class="agenda-events" style="background-color:#e0e0e0">
+                                    <div class="agenda-event">
+
+                                        
+                                        <button class="btn btn-primary" type="button"
+                                                onclick="location.href='@Url.Action("evenemangssida", "Evenemangs", new { idet = ev.UppgifterID })'" title="@ev.UppgifterID">
+                                            @if (ev.Påbörjad == true)
+                                            {
+                                                @ev.Namn <span class="badge">Påbörjad</span>
+                                            }
+                                            else if (ev.Påbörjad == false)
+                                            {
+                                                @ev.Namn <span class="badge">Ej tagen</span>
+                                            }
+                                            else if (ev.Påbörjad == true && ev.Utförd == true)
+                                            {
+                                                @ev.Namn <span class="badge">Klar</span>
+                                            }
 
 
+                                        </button>
 
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    }
 
-
-
-
-
-
-<h2>@Model.Item1.GruppNamn</h2>
-
-<div class="container-fluid ">
-    <div class="col-lg-12">
-    @Html.DisplayName("Medlemmar")
-    </div>
-    @foreach (var item in Model.Item1.GruppMedlemmar)
-    { 
-        <div class="col-lg-2">
-            <div class="well-lg grupper">
-            <p class="grupptext">@item.FörNamn @item.EfterNamn</p>
+                </table>
             </div>
+
         </div>
-    }
-</div> 
-
-<div class="container-fluid ">
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayName("Evenemang")
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model.Item2)
-        {
-            <tr>
-                <td>
-
-                    <a href="@Url.Action("evenemangssida", "Evenemangs", new { idet = item.EvenemangID })" title="@item.EvenemangID">
-                        @item.Namn
-                    </a>
-                </td>
-            </tr>
-        }
-    </table>
+    </div>
 </div>
+                
 
-    @Html.ActionLink("skapa evenemang", "Create", "Evenemangs")
 
 
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayName("Uppgifter")
-            </th>
-            <th></th>
-        </tr>
+                @*SLUT KALENDER*@
 
-        @foreach (var item in Model.Item3)
+                <div class="col-sm-6">
+
+                    <table class="table table-condensed table-responsive">
+                        <thead>
+                            <tr>
+                                <th>Uppgifter</th>
+                            </tr>
+                        </thead>
+                    </table>
+
+                    @{var uppgifter = Model.Item3.Where(u => u.TillhörGrupp.GruppID == Model.Item1.GruppID).ToList();}
+
+                    @foreach (var uppg in uppgifter)
+                    {
+                        //uppgifter som inloggad är ansvarig för ska visas i rött, uppgifter som ingen tagit på sig ännu ska visas i blått
+
+                        //om det är inloggad användare
+
+                        if (uppg.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
+                        {
+                            if (uppg.Utförd == true)
+                            {
+
+                            }
+                            else
+                            {
+                                <h3><span class="label label-success">@uppg.Namn</span></h3>
+                            }
+                        }
+                        //om ingen är ansvarig
+                        else if (uppg.Ansvarig.AnvändarID == 0)
+                        {
+                            if (uppg.Utförd == true)
+                            {
+
+                            }
+                            else
+                            {
+                                <h3><span class="label label-danger">@uppg.Namn</span></h3>
+                            }
+                        }
+                        //om någon annan än inloggad är ansvarig
+                        else if (uppg.Ansvarig.AnvändarID != Convert.ToInt32(Session["AnvändarID"]))
+                        {
+                            if (uppg.Utförd == true)
+                            {
+
+                            }
+                            else
+                            {
+                                <h3><span class="label label-default">@uppg.Namn</span></h3>
+                            }
+                        }
+                    }
+                </div>
+            </div>
+                        }
+    </div>
+    <div class="clearfix"></div>
+
+
+                        }
+
+
+
+
+
+
+@*<h2>@Model.Item1.GruppNamn</h2>
+
+    <div class="container-fluid ">
+        <div class="col-lg-12">
+        @Html.DisplayName("Medlemmar")
+        </div>
+        @foreach (var item in Model.Item1.GruppMedlemmar)
         {
-            <tr>
-                <td>
-
-                    <a href="@Url.Action("UppgiftsSida", "Uppgifter", new { idet = item.UppgifterID })" title="@item.UppgifterID">
-                        @item.Namn
-                    </a>
-                </td>
-            </tr>
+            <div class="col-lg-2">
+                <div class="well-lg grupper">
+                <p class="grupptext">@item.FörNamn @item.EfterNamn</p>
+                </div>
+            </div>
         }
-    </table>
+    </div>
 
-    <p>@Html.ActionLink("Lägg till Uppgift", "Create", "Uppgifter")</p>
+    <div class="container-fluid ">
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayName("Evenemang")
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.Item2)
+            {
+                <tr>
+                    <td>
+
+                        <a href="@Url.Action("evenemangssida", "Evenemangs", new { idet = item.EvenemangID })" title="@item.EvenemangID">
+                            @item.Namn
+                        </a>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+
+        @Html.ActionLink("skapa evenemang", "Create", "Evenemangs")
+
+
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayName("Uppgifter")
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.Item3)
+            {
+                <tr>
+                    <td>
+
+                        <a href="@Url.Action("UppgiftsSida", "Uppgifter", new { idet = item.UppgifterID })" title="@item.UppgifterID">
+                            @item.Namn
+                        </a>
+                    </td>
+                </tr>
+            }
+        </table>
+
+        <p>@Html.ActionLink("Lägg till Uppgift", "Create", "Uppgifter")</p>*@
+
+
+
+@section Scripts {
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+}
+
