--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -5,6 +5,8 @@
 }
 
 <link rel="stylesheet" type="text/css" href="~/Content/comments.css">
+<link rel="stylesheet" type="text/css" href="~/Content/Sensify.css">
+
 
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
@@ -69,7 +71,7 @@
                 <!-- Pane comments -->
                 <div class="tab-pane active animated fadeInRight" id="comments">
                     <!-- Begin scroll wrappper -->
-                    <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 325px;">
+                    <div class="slimScrollDiv">
                         <div class="scroll-widget">
                             <ul class="media-list">
 
@@ -84,7 +86,16 @@
                                            
                                         </a>
                                         <div class="media-body">
-                                            <h4 class="media-heading"><a>@item.kommentator.FörNamn @item.kommentator.EfterNamn</a> <small>@item.TidenFörKommentaren.ToShortTimeString()</small></h4>
+                                            @if (item.kommentator != null)
+                                            {
+                                                <h4 class="media-heading"><a>@item.kommentator.HelaNamnet</a> <small>@item.TidenFörKommentaren.ToShortTimeString()</small></h4>
+                                            }
+                                            else
+                                            {
+                                                <h4 class="media-heading"><a>Kunde inte hämta namn från databasen</a> <small>@item.TidenFörKommentaren.ToShortTimeString()</small></h4>
+
+                                            }
+
                                             <p>@item.Text</p>
                                         </div>
                                     </li>
@@ -92,7 +103,7 @@
                             </ul>
 
                         </div>
-                    <div class="slimScrollBar" style="width: 3px; position: absolute; top: 11px; opacity: 0.4; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; z-index: 99; left: 1px; height: 209.5734126984127px; background: rgb(134, 134, 134);"></div><div class="slimScrollRail" style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; opacity: 0.3; z-index: 90; left: 1px; background: rgb(51, 51, 51);"></div>
+                    <div class="slimScrollBar"></div><div class="slimScrollRail"></div>
 
                     </div><!-- End div .scroll-widget -->
 
