--- a/Systemet/Views/Grupp/gruppsida.cshtml
+++ b/Systemet/Views/Grupp/gruppsida.cshtml
@@ -99,41 +99,50 @@
 
                                 <td class="agenda-events" style="background-color:#e0e0e0">
                                     <div class="agenda-event">
-                                        @if (ev.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
+                                        @if (ev.Ansvarig != null)
                                         {
-                                            <button class="btn btn-primary" type="button" style="background-color:#3e8d27"
-                                                    onclick="location.href='@Url.Action("uppgiftssida", "uppgifter", new { idet = ev.UppgifterID })'" title="@ev.UppgifterID">
-                                                @if (ev.Påbörjad == true)
-                                                {
-                                                    @ev.Namn <span class="badge">Påbörjad</span>
-                                                }
-                                                else if (ev.Påbörjad == false)
-                                                {
-                                                    @ev.Namn <span class="badge">inte påbörjad</span>
-                                                }
-                                                else if (ev.Påbörjad == true && ev.Utförd == true)
-                                                {
-                                                    @ev.Namn <span class="badge">Klar</span>
-                                                }
-                                            </button>
+                                            if (ev.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
+                                            {
+                                                <button class="btn btn-primary" type="button" style="background-color:#3e8d27"
+                                                        onclick="location.href='@Url.Action("uppgiftssida", "uppgifter", new { idet = ev.UppgifterID })'" title="@ev.UppgifterID">
+                                                    @if (ev.Påbörjad == true)
+                                                    {
+                                                        @ev.Namn <span class="badge">Påbörjad</span>
+                                                    }
+                                                    else if (ev.Påbörjad == false)
+                                                    {
+                                                        @ev.Namn <span class="badge">inte påbörjad</span>
+                                                    }
+                                                    else if (ev.Påbörjad == true && ev.Utförd == true)
+                                                    {
+                                                        @ev.Namn <span class="badge">Klar</span>
+                                                    }
+                                                </button>
+                                            }
+                                            else
+                                            {
+                                                <button class="btn btn-primary" type="button" style="background-color:#af1432; cursor:default">
+                                                    @if (ev.Påbörjad == true)
+                                                    {
+                                                        @ev.Namn <span class="badge">Påbörjad</span>
+                                                    }
+                                                    else if (ev.Påbörjad == false)
+                                                    {
+                                                        @ev.Namn <span class="badge">inte påbörjad</span>
+                                                    }
+                                                    else if (ev.Påbörjad == true && ev.Utförd == true)
+                                                    {
+                                                        @ev.Namn <span class="badge">Klar</span>
+                                                    }
+                                                </button>
+                                            }
                                         }
                                         else
                                         {
-                                            <button class="btn btn-primary" type="button"style="background-color:#af1432; cursor:default">
-                                                @if (ev.Påbörjad == true)
-                                                {
-                                                    @ev.Namn <span class="badge">Påbörjad</span>
-                                                }
-                                                else if (ev.Påbörjad == false)
-                                                {
-                                                    @ev.Namn <span class="badge">inte påbörjad</span>
-                                                }
-                                                else if (ev.Påbörjad == true && ev.Utförd == true)
-                                                {
-                                                    @ev.Namn <span class="badge">Klar</span>
-                                                }
-                                            </button>
+
+
                                         }
+                                        
 
                                     </div>
                                 </td>
