--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "evenemangssida";
+    TempData["användarID"] = Convert.ToInt32(Session["AnvändarID"]);
 }
 
 <link rel="stylesheet" type="text/css" href="~/Content/comments.css">
@@ -19,26 +20,7 @@
 
 <p>här ska man kunna se info om vart, när och hur. man ska kunna kommentera eventet och man ska kunna läsa tidigare kommentarer</p>
 
-@if (Model.Item2 != null)
-{
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayName("kommentarer")
-            </th>            
-            <th></th>
-        </tr>
 
-        @foreach (var item in Model.Item2)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Text)
-                </td>
-            </tr>
-        }
-    </table>
-}
 
 <div id="modal-container" class="modal fade hidden-print" tabindex="-1" role="dialog">
     <div class="modal-dialog">
@@ -47,9 +29,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 
 <div class="container bootstrap snippet">
@@ -84,7 +63,7 @@
                                            
                                         </a>
                                         <div class="media-body">
-                                            <h4 class="media-heading"><a>@item.kommentator.FörNamn @item.kommentator.EfterNamn</a> <small>@item.TidenFörKommentaren.ToShortTimeString()</small></h4>
+                                            <h4 class="media-heading" style="cursor: default"><a>@item.kommentator.HelaNamnet</a> <small>@item.TidenFörKommentaren.ToShortTimeString()</small></h4>
                                             <p>@item.Text</p>
                                         </div>
                                     </li>
@@ -105,10 +84,6 @@
         <!-- End tab comment and popular posts -->
     </div>
 </div>
-
-
-
-
 
 
 @* Create a link that calls the controller method that returns the partial view*@
