--- a/Systemet/Views/EvenemangsKommentarers/komments.cshtml
+++ b/Systemet/Views/EvenemangsKommentarers/komments.cshtml
@@ -5,10 +5,10 @@
 
 }
 <ol class="breadcrumb">
-    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
-    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
-    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
-    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">@Model.evenemang.Namn</a></li>
+    <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
+    <li>@Html.ActionLink("Alla mina grupper", "minagrupper", "Grupp")</li>
+    <li>@Html.ActionLink("Gruppens startsida", "gruppsida", "Grupp", new { Model.evenemang.grupp.GruppNamn }, null)</li>
+    <li>@Html.ActionLink("Evenemanget", "evenemangssida", "Evenemangs", new { Model.evenemang.Namn }, null)</li>
     <li class="active">Kommentarer: @Model.evenemang.Namn</li>
 </ol>
 
